@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-19T16:06:59Z",
-  "count_outdated" : 1664,
-  "uniques_outdated" : 477,
-  "count" : 1697,
+  "timestamp" : "2022-07-20T00:29:03Z",
+  "count_outdated" : 1667,
+  "uniques_outdated" : 479,
+  "count" : 1698,
   "uniques" : 494,
   "clones" : [
-    {
-      "timestamp": "2022-07-05T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-07-06T00:00:00Z",
       "count": 2,
