@@ -1,12 +1,7 @@
 {
-  "count": 33,
-  "uniques": 7,
+  "count": 31,
+  "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2022-07-05T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-07-06T00:00:00Z",
       "count": 2,
